--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "willpost-frontend-app",
   "version": "0.1.0",
+  "homepage": "https://saeedblanchette.github.io/willpostfrontend",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.0.0",
@@ -9,14 +10,27 @@
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
+    "axios": "^0.21.4",
     "framer-motion": "^4.0.0",
+    "gh-pages": "^3.2.3",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^3.0.0",
+    "react-h5-audio-player": "^3.7.2",
+    "react-hook-form": "^7.12.2",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "react-webcam": "^5.2.4",
+    "redux": "^4.1.1",
+    "video-react": "^0.14.1",
     "web-vitals": "^0.2.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
